--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SMSBomber">
         <activity android:name=".AboutUs"></activity>
+        <activity android:name=".TextBomber"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
