--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@drawable/message"
         android:supportsRtl="true"
         android:theme="@style/Theme.SMSBomber">
+        <activity android:name=".Feedback"></activity>
         <activity android:name=".AboutUs"></activity>
         <activity android:name=".TextBomber"></activity>
         <activity
