--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/message"
+        android:icon="@drawable/newappicon"
         android:label="@string/app_name"
 
-        android:roundIcon="@drawable/message"
+        android:roundIcon="@drawable/newappicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.SMSBomber">
         <activity android:name=".Feedback"></activity>
